--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         <!-- Add your site or application content here -->
         <main>
           <div id="page1">
-            <h1>Scroll for More</h1>
+              <h1>JJ's</h1>
+              <h2 id="p1Subtitle" class="animated">Farm to Table</h2>
+
+          </div>
+
+          <div id="page2">
           </div>
 
           <div id="page2">
