--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Fancy Scroll</title>
         <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+        <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,12 +25,10 @@
         <!-- Add your site or application content here -->
         <main>
           <div id="page1">
-              <h1>JJ's</h1>
-              <h2 id="p1Subtitle" class="animated">Farm to Table</h2>
+              <h1>J &amp; J's</h1>
+              <h3 id="p1Subtitle" class="animated fadeIn"><span class="fa-layers fa-fw"><i class="far fa-lemon" data-fa-transform="down-.5 right-.5" style="color:#000;"></i><i class="far fa-lemon"></i></span><br>Farm to Table</h3>
+              <p id="ctaP1" class="animated fadeIn">Start Scrolling<br><span class="fa-layers fa-fw"><i class="fas fa-hand-point-down" data-fa-transform="down-.5 right-.5" style="color:#000;"></i><i class="fas fa-hand-point-down"></i></span></p>
 
-          </div>
-
-          <div id="page2">
           </div>
 
           <div id="page2">
