add page 2 content

--- a/index.html
+++ b/index.html
@@ -26,12 +26,35 @@
         <main>
           <div id="page1">
               <h1>J &amp; J's</h1>
-              <h3 id="p1Subtitle" class="animated fadeIn"><span class="fa-layers fa-fw"><i class="far fa-lemon" data-fa-transform="down-.5 right-.5" style="color:#000;"></i><i class="far fa-lemon"></i></span><br>Farm to Table</h3>
+              <h3 id="p1Subtitle" class="animated fadeIn">Farm to Table</h3>
               <p id="ctaP1" class="animated fadeIn">Start Scrolling<br><span class="fa-layers fa-fw"><i class="fas fa-hand-point-down" data-fa-transform="down-.5 right-.5" style="color:#000;"></i><i class="fas fa-hand-point-down"></i></span></p>
-
           </div>
 
           <div id="page2">
+              <div id="titlePage2">
+                <h2>J &amp; J's</h2>
+                <ul>
+                  <li><h3><span class="fa-layers fa-fw"><i class="fas fa-utensils" data-fa-transform="down-.5 right-.5" style="color:#000;"></i><i class="fas fa-utensils"></i></span>World Class Cuisine</h3></li>
+                  <li><h3><span class="fa-layers fa-fw"><i class="fas fa-lemon" data-fa-transform="down-.5 right-.5" style="color:#000;"></i><i class="fas fa-lemon"></i></span>Locally Sourced Ingredients</h3></li>
+                  <li><h3><span class="fa-layers fa-fw"><i class="fas fa-sun" data-fa-transform="down-.5 right-.5" style="color:#000;"></i><i class="fas fa-sun"></i></span>Eco Over Ego</h3></li>
+                  <p>Follow our food from farm to table.</p>
+                </ul>
+              </div>
+              <div id="nav-menu">
+                <div id="menu-btn" class="animated diamond">
+                  <h3>Our<br>Menu</h3>
+              </div>
+              <div id="menu-btn-2nd" class="animated diamond">
+              </div>
+              <div id="our-story-btn" class="animated diamond">
+                <h3>Our<br>Story</h3>
+              </div>
+              <div id="story-btn-2nd" class="animated diamond">
+              </div>
+            </div>
+          </div>
+
+          <div id="page3">
             <h1 id="chapt1">Chapter 1</h1>
             <video playsinline autoplay muted loop poster="space.jpeg" id="bgvid1" class="animated slideInDown">
             <source src="creek.webm" type="video/webm">
