--- a/index.html
+++ b/index.html
@@ -30,26 +30,27 @@
               <p id="ctaP1" class="animated fadeIn">Start Scrolling<br><span class="fa-layers fa-fw"><i class="fas fa-hand-point-down" data-fa-transform="down-.5 right-.5" style="color:#000;"></i><i class="fas fa-hand-point-down"></i></span></p>
           </div>
 
-          <div id="page2">
+          <div id="page2" class="animated slideInDown">
               <div id="titlePage2">
-                <h2>J &amp; J's</h2>
-                <ul>
+                <h1 id="pageTitle2">J &amp; J's</h1>
+                <ul id="listP2"class="animated slideInRight">
                   <li><h3><span class="fa-layers fa-fw"><i class="fas fa-utensils" data-fa-transform="down-.5 right-.5" style="color:#000;"></i><i class="fas fa-utensils"></i></span>World Class Cuisine</h3></li>
                   <li><h3><span class="fa-layers fa-fw"><i class="fas fa-lemon" data-fa-transform="down-.5 right-.5" style="color:#000;"></i><i class="fas fa-lemon"></i></span>Locally Sourced Ingredients</h3></li>
                   <li><h3><span class="fa-layers fa-fw"><i class="fas fa-sun" data-fa-transform="down-.5 right-.5" style="color:#000;"></i><i class="fas fa-sun"></i></span>Eco Over Ego</h3></li>
                   <p>Follow our food from farm to table.</p>
                 </ul>
+                <p id="pointerP2"><span class="fa-layers fa-fw animated infinite pulse"><i class="fas fa-chevron-circle-down" data-fa-transform="down-.5 right-.5" style="color:#000;"></i><i class="fas fa-chevron-circle-down"></i></span></p>
               </div>
               <div id="nav-menu">
-                <div id="menu-btn" class="animated diamond">
-                  <h3>Our<br>Menu</h3>
+                <div id="menu-btn" class="animated fadeIn diamond">
+                  <h3 class="animated slideInLeft">Our<br>Menu</h3>
               </div>
-              <div id="menu-btn-2nd" class="animated diamond">
+              <div id="menu-btn-2nd" class="animated fadeIn diamond">
               </div>
-              <div id="our-story-btn" class="animated diamond">
-                <h3>Our<br>Story</h3>
+              <div id="our-story-btn" class="animated fadeIn diamond">
+                <h3 id="navStory" class="animated slideInLeft">Our<br>Story</h3>
               </div>
-              <div id="story-btn-2nd" class="animated diamond">
+              <div id="story-btn-2nd" class="animated fadeIn diamond">
               </div>
             </div>
           </div>
