fix our story button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <div id="nav-menu">
                 <div id="menu-btn" class="animated fadeIn diamond">
                   <h3 class="animated slideInLeft">Our<br>Menu</h3>
-              </div>
+                </div>
               <div id="menu-btn-2nd" class="animated fadeIn diamond">
               </div>
               <div id="our-story-btn" class="animated fadeIn diamond">
@@ -57,8 +57,8 @@
 
           <div id="page3">
             <h1 id="chapt1">Chapter 1</h1>
-            <video playsinline autoplay muted loop poster="space.jpeg" id="bgvid1" class="animated slideInDown">
-            <source src="creek.webm" type="video/webm">
+            <video playsinline autoplay muted loop poster="" id="bgvid1" class="animated slideInDown">
+            <!--<source src="creek.webm" type="video/webm">-->
             <source src="creek.mp4" type="video/mp4">
               <!--[if lt IE 9]>
                 <script>
